--- a/style/milestone-plugin.css
+++ b/style/milestone-plugin.css
@@ -19,7 +19,7 @@
 
 .milestone-horizontal {
   position: absolute;
-  top: 50%;
+  top: calc(50% - 2px);
   left: 0;
   right: 0;
   height: 4px;
@@ -132,7 +132,8 @@
 }
 
 .bottom .milestone-item-content {
-  
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 /* ----- */
