--- a/style/wikiIcon-plugin.css
+++ b/style/wikiIcon-plugin.css
@@ -1,15 +1,16 @@
 .wikipedia-link {
-  display: inline-block;
+  display: inline-flex;
   position: relative;
   text-decoration: none;
   border-radius: 50%;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
+  align-items: center;
 }
 
 .wikipedia-icon {
-  width: 17px;
-  height: 17px;
-  border-radius: 50%;
+  width: 15px !important;
+  height: 15px !important;
+  border-radius: 50% !important;
   border: 2px solid #fff;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
   transition: border-color 0.2s ease;
@@ -20,12 +21,15 @@
 }
 
 .wikipedia-preview-container {
-  display: inline-block;
+  display: inline-flex;
   position: relative;
   vertical-align: middle; 
+  align-items: center;
+  margin: 0 5px
 }
 
 .wikipedia-preview-box {
+  direction: rtl;
   position: absolute;
   bottom: -150px;
   left: 220px;
@@ -42,8 +46,24 @@
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.2s ease, visibility 0.2s ease;
-  z-index: 1000;
+  z-index: 9999;
   overflow: hidden;
+  padding: 0x;
+  box-sizing: border-box;
+  line-height: 1.7;
+}
+
+.loading{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .wikipedia-preview-container:hover .wikipedia-preview-box {
@@ -52,9 +72,12 @@
 }
 
 .wikipedia-iframe {
+  position: relative;
   width: 100%;
   height: 100%;
   border: none;
   border-radius: 8px;
   margin: 0 !important;
+  background: transparent;
+  z-index: 100;
 }
