--- a/style/milestone-plugin.css
+++ b/style/milestone-plugin.css
@@ -140,7 +140,7 @@
 
  .milestone-item-content .milestone-year {
   margin: 0;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
   /* color: #ccc;   */
   direction: ltr !important;
@@ -148,12 +148,25 @@
 }
 
  .milestone-item-content .milestone-description {
-  font-size: 13px;
-  /* color: #ccc;  */
-  max-width: 220px;
-  /* box-shadow: 4px 2px 20px rgb(0 0 0 / 30%);
-  background-color: #00000030;
-  border-radius: 23%; */
+  font-size: 11px;
+  max-width: 90px;
+  overflow-wrap: break-word;
+  white-space: normal;
+  position: relative;
+}
+.milestone-item-content .milestone-description .milestone-title {
+  z-index: 10000; 
+  position: relative;
+}
+.milestone-item-content .milestone-description .milestone-border {
+  position: absolute;
+  left: 0;
+  top: 0;
+  -webkit-text-stroke: 5px #fff;
+}
+
+.milestone-item-content .milestone-description .milestone-border a{
+  color: white !important;
 }
 
 @media (max-width: 600px) {
@@ -161,6 +174,6 @@
     margin: 0 10px;
   }
   .milestone-description {
-    max-width: 150px;
+    max-width: 100px;
   }
 }
