--- a/style/neiltime-plugin.css
+++ b/style/neiltime-plugin.css
@@ -58,7 +58,12 @@
 .neiltime-item-content h4 {
     margin: 0;
     font-size: 18px;
-    padding: 3px;
+    padding: 3px 25px;
+    margin-bottom: 20px;
+}
+
+.neiltime-item-content h4 p {
+    line-height: 2rem;
 }
 
 .neiltime-item-content .box {
